--- a/app/index.html
+++ b/app/index.html
@@ -17,11 +17,17 @@
 
 	<!-- CUSTOM HTML -->
 
-	<div class="container" style="max-width: 700px; margin: auto">
-
-		<img src="images/dest/preview.jpg" alt="Start HTML5 Template" width="100%"><br><br>
-		<h2>Welcome to startup HTML template OptimizedHTML 5!</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam reprehenderit nulla alias expedita a qui, pariatur doloremque ipsa fugit laboriosam odio iure recusandae laborum delectus praesentium magni reiciendis voluptatem. Sed.</p>
+	<div class="content wrapper">
+		<h1>Lorem ipsum</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, adipisci aperiam corporis dicta dignissimos
+			dolor dolorem earum expedita fugit, illum, ipsa ipsum labore modi odio officiis omnis saepe sequi vero.</p>
+		<h2>Lorem ipsum</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, adipisci aperiam corporis dicta dignissimos
+			dolor dolorem earum expedita fugit, illum, ipsa ipsum labore modi odio officiis omnis saepe sequi vero.</p>
+		<h1>Lorem ipsum</h1>
+		<h2>Lorem ipsum</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, adipisci aperiam corporis dicta dignissimos
+			dolor dolorem earum expedita fugit, illum, ipsa ipsum labore modi odio officiis omnis saepe sequi vero.</p>
 
 	</div>
 
